[gd_scene load_steps=31 format=3 uid="uid://cusmuny1el101"]

[ext_resource type="Shader" path="res://menus/Pause_Menu/pause_menu.gdshader" id="1_j3kof"]
[ext_resource type="Script" path="res://menus/Pause_Menu/pause_menu.gd" id="1_ll0l5"]
[ext_resource type="FontFile" uid="uid://cs8850q2te7fk" path="res://menus/Font/ThaleahFat.ttf" id="3_2374v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kjvt6"]
shader = ExtResource("1_j3kof")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srxli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pip67"]
bg_color = Color(0.298039, 0.898039, 0.992157, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="GDScript" id="GDScript_ll36t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_geafr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvtor"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5c5q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_54q32"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5q8g3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dshgo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qovwt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ejkct"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_unbhp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3q4ri"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jj0km"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5a2tq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nuc0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7cb1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_274m8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5xcm1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dji5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jsffc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ym0vq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nmcb7"]

[sub_resource type="Animation" id="Animation_mefcl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_a73ao"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.948]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tiief"]
_data = {
"RESET": SubResource("Animation_mefcl"),
"blur": SubResource("Animation_a73ao")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ll0l5")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kjvt6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_srxli")

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pip67")
script = SubResource("GDScript_ll36t")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.705882, 0.105882, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("3_2374v")
theme_override_font_sizes/font_size = 120
text = "Pause"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="ResumeButton" type="Button" parent="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../RestartButton")
focus_next = NodePath("../RestartButton")
focus_previous = NodePath("../QuitButton")
theme_override_colors/font_color = Color(0.956863, 0.705882, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_2374v")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_geafr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pvtor")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b5c5q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_54q32")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5q8g3")
text = "Resume"
icon_alignment = 1

[node name="RestartButton" type="Button" parent="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
focus_next = NodePath("../MainMenuButton")
focus_previous = NodePath("../ResumeButton")
theme_override_colors/font_color = Color(0.956863, 0.705882, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_2374v")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_dshgo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qovwt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ejkct")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_unbhp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3q4ri")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../RestartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../RestartButton")
theme_override_colors/font_color = Color(0.956863, 0.705882, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_2374v")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_jj0km")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5a2tq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nuc0g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7cb1e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_274m8")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../MainMenuButton")
theme_override_colors/font_color = Color(0.956863, 0.705882, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_2374v")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_5xcm1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dji5v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jsffc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ym0vq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nmcb7")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tiief")
}

[connection signal="pressed" from="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
